Bug 244875 - Incorrect result reported after correct answering
Summary: Incorrect result reported after correct answering
Status: RESOLVED FIXED
Alias: None
Product: kbruch
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Sebastian Stein
URL:
Keywords:
: 244876 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-07-16 17:25 UTC by Ricardo Martínez G.
Modified: 2010-12-22 21:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screen capture result with graphics pointers in std format (166.33 KB, image/jpeg)
2010-07-16 17:25 UTC, Ricardo Martínez G.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ricardo Martínez G. 2010-07-16 17:25:30 UTC
Created attachment 49243 [details]
Screen capture result with graphics pointers in std format

Version:           unspecified (using KDE 4.4.4) 
OS:                MS Windows

After a correct fraction result, the application showed a vindow declaring it as an incorrect answer EVEN SHOWING THE SAME RIGTH ONE WICH WAS ANSWERED BY THE USER

Reproducible: Always

Steps to Reproduce:
when app shows a fraction sum you type the guessed result and click on the validation button.

Actual Results:  
The same wrong evaluation of the result and a message windows telling it

Expected Results:  
Right answer message windows
Comment 1 Anselmo L. S. Melo (anselmolsm) 2010-07-17 23:34:12 UTC
*** Bug 244876 has been marked as a duplicate of this bug. ***
Comment 2 Sebastian Stein 2010-12-22 20:27:00 UTC
This bug reports stems from a misunderstanding. Look in your screenshot. You selected that the answer must be entered in "mixed numbers" notation. But you didn't enter it, but instead you put 3/2. This is also what the error message tries to explain. It says, yes, basically you provided the right answer, but in the wrong notation. Therefore, the answer is counted as wrong.

However, I agree with you that this is not really obvious. It should not show "3/2" in the solution widget. I will remove that.
Comment 3 Sebastian Stein 2010-12-22 20:27:00 UTC
This bug reports stems from a misunderstanding. Look in your screenshot. You selected that the answer must be entered in "mixed numbers" notation. But you didn't enter it, but instead you put 3/2. This is also what the error message tries to explain. It says, yes, basically you provided the right answer, but in the wrong notation. Therefore, the answer is counted as wrong.

However, I agree with you that this is not really obvious. It should not show "3/2" in the solution widget. I will remove that.
Comment 4 Sebastian Stein 2010-12-22 21:16:50 UTC
SVN commit 1208674 by sstein:

It was confusing for some users that the solution was shown in mixed numbers
notation and as ordinary ratio. Now, the solution is shown in the format in
which the answer is expected. This should simplify the UI and hopefully remove
this confusion.

BUG: 244875
GUI


 M  +0 -35     mainqtwidget.cpp  
 M  +0 -9      mainqtwidget.h  
 M  +10 -10    resultwidget.cpp  
 M  +2 -2      resultwidget.h  
 M  +7 -5      taskview.cpp  
 M  +0 -1      taskview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1208674