It was confusing for some users that the solution was shown in mixed numbers notation and as ordinary ratio. Now, the solution is shown in the format in which the answer is expected. This should simplify the UI and hopefully remove this confusion.

BUG: 244875
GUI

svn path=/trunk/KDE/kdeedu/kbruch/; revision=1208674